[package]
name = "taffy-android"
version = "0.2.0"
include = ["src/**/*", "Cargo.toml"]
authors = ["Emil Sjölander <emil@visly.app>"]
edition = "2021"

[dependencies]
jni = { version = "0.19.0", default-features = false }
taffy = { version = "0.2.0", path = "../../../../../.." }

[lib]
name = "taffy"
crate-type = ["cdylib"]

[workspace]
members = []
